--- a/desktop/copy_desktop_frontend.css
+++ b/desktop/copy_desktop_frontend.css
@@ -1,1 +1,28 @@
 /* CSS declarations go here */
+.pasted-from{
+	border-radius: 0;
+	border: none;
+	box-shadow: none;
+	text-align: center;
+	font-size: 2em;
+	font-weight: 300;
+	background-color: #f5f5f5;
+	margin-bottom: 20px;
+}
+
+.pasted-from:focus {
+	border-color: none;
+	box-shadow: none;
+}
+
+.paste-to{
+	border-radius: 0;
+	box-shadow: none;
+	text-align: center;
+	font-size: 2em;
+	margin-bottom: 20px;
+}
+
+.paste-btn{
+	border-radius: 0;
+}
