--- a/mobile/copy_mobile_frontend.css
+++ b/mobile/copy_mobile_frontend.css
@@ -1,1 +1,67 @@
 /* CSS declarations go here */
+body {
+	margin-top: 10px;
+}
+
+h3 {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	font-size: 1em;
+}
+
+.nav {
+	border-bottom: 1px solid #ccc;
+}
+
+.hidden {
+	visibility: hidden;
+}
+
+.visible {
+	visibility: visible;
+}
+
+.glyphicon {
+	color: #f05a28;
+	font-size:1.5em;
+	top: 14px;
+}
+
+textarea.form-control {
+	font-weight: 300;
+	padding: 20px 10px;
+	font-size: 1.5em;
+	text-align: center;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+}
+
+textarea.form-control:focus{
+	box-shadow: none;
+}
+
+.table > tbody > tr > td.past{
+	font-size: 1.5em;
+	font-weight: 300;
+	padding: 15px 15px;
+}
+
+.pasted-from {
+	margin-top: 20px;
+	border: none;
+	background-color: #f5f5f5;
+}
+
+.paste-to {
+	border-radius: 0;	
+}
+
+
+.paste-btn {
+	border-radius: 0;
+	bottom: 0;
+	font-size: 1.5em;
+	font-weight: 300;
+	padding-top:20px;
+	padding-bottom: 20px;
+}
